--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "api": "json-server ./src/services/server.json --port 3333 --host 127.0.0.1 --delay 700",
     "start": "react-native start"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
