--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "api": "json-server ./src/services/server.json --port 3333 --host 127.0.0.1 --delay 700",
+    "api": "json-server ./src/services/server.json --port 3333 --host 127.0.0.1 --delay 800",
     "start": "react-native start"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.5",
+    "lottie-react-native": "4.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
