--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,7 +15,9 @@ target 'rentx' do
     :path => config[:reactNativePath],
     :hermes_enabled => podfile_properties['expo.jsEngine'] == 'hermes'
   )
-
+  pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi', :modular_headers => true
+  pod 'simdjson', path: '../node_modules/@nozbe/simdjson'
+  
   # Uncomment to opt-in to using Flipper
   #
   # if !ENV['CI']
